notes updates week 2

--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
         </div>
     </div>
   </div>
+  <div class="w-100"></div>
+  <div class="container overflow-x-hidden">
+    <div class="row overflow-x-hidden">
+      <div class="col-sm-8 offset-sm-2">
+        <div class="section theme" data-aos="fade-up">
+          <img src="./dist/leaves.svg" class="leaves-3"/>
+          <div class="d-flex">
+
+            <h2 class="">GreenHacks 2020 Theme: Sustainable Cities</h2>
+            <img class="theme-logo" src="./dist/themenotext.png"/>
+          </div>
+          <p>
+            Around the world, nations are rethinking development and tasking themselves to go green and urbanize sustainably. From global initiatives like the United Nations 2030 Agenda for Sustainable Development to local ones, such as the 2019 Baltimore Sustainability Plan, sustainable cities are a seemingly universal goal. Although interest is widespread, the implementation of sustainable cities can be varied. There is no one template for a sustainable city. They are made through the melding of existing cultures, infrastructure, and design with new ideas that reduce greenhouse gas emissions, decrease light pollution, increase and emphasize natural features and vegetation, and much more. The concept of sustainable cities is to optimize the environmental health of the urban area while improving social equity and maintaining development and economic growth.
+            <p>
+              While it is not always easy to build a sustainable city, let alone transition an existing city to sustainable practices, the benefits are tremendous for both current residents and generations of future residents. On a global scale, advanced treatment technologies reducing carbon dioxide emissions and combatting ocean acidification are often motivating to climate experts and environmental gurus. However, even on an individual level, sustainable policies, practices, and innovations have visible impacts.
+          </p>
+          <p>
+            We are tasking you to bridge together your knowledge, talents, and skills to create a solution to an urban environmental issue. Will you tackle food deserts, maybe design a green roof, or something entirely different? Choose one of three tracks (announced during the GreenHacks 2020 Opening Ceremonies), focus on a specific challenge within your track, and start solving!
+          </p>
+
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container overflow-x-hidden">
     <div class="row overflow-x-hidden">
       <div class="col-sm-8 offset-sm-2">
@@ -79,8 +103,6 @@
             </ul>
         </div>
       </div>
-      <div class="w-100"></div>
-      <!-- line break -->
       <div class="col-sm-8 offset-sm-2">
         <div class="about-btn-container d-flex justify-content-around flex-wrap">
           <a type="button" class="btn btn-dark about-btn" href="./registration.html">Participate</a>
@@ -89,6 +111,12 @@
         </div>
       </div>
     </div>
+      <div class="w-100"></div>
+      <!-- line break -->
+
+
+      <div class="w-100"></div>
+      <!-- line break -->
     <div class="row col-sm-8 offset-sm-2">
       <div class="faq " data-aos="fade-up">
         <h2 class="faq-title">
