--- a/registration.html
+++ b/registration.html
@@ -56,6 +56,7 @@
       </ul>
     </div>
   </nav>
+  <!-- registrationi closed section -->
   <!-- <div class="container-fluid ">
     <div class="row parallax parallax-fractal">
       <div class="col-md-10 offset-md-1">
@@ -72,7 +73,24 @@
 
       </div>
     </div> -->
+    <!-- <div class="container-fluid ">
+      <div class="row parallax parallax-fractal">
+
+    </div> -->
     <div class="row">
+      <div class="col-10 offset-1 col-md-6 offset-md-3">
+        <h3 class="registration-title">Registration for GreenHacks 2020 is opening soon!</h3>
+        <p>
+        We are excited to announce that the theme for this year’s hackathon will be Sustainable Cities. We emphasize that participants can come from all backgrounds, majors, and areas of expertise, and we welcome students from across the Johns Hopkins network to register, including those from the Hopkins Homewood campus, Bloomberg School of Public Health, the Carey Business School, and MICA. You can register as a team or as an individual and find a team when you arrive. Registration is open from Feb 13 - March 20.
+        </p>
+
+        <p>
+        Feel free to  <a href="mailto:greenhacksjhu@gmail.com">reach out to us</a> with any questions or concerns regarding registration.
+        </p>
+        <p>
+        We look forward to seeing you there!
+        </p>
+      </div>
       <div class="col-10 offset-1 col-md-6 offset-md-3 register">
         <h3 class="form-title">Registration</h3>
         <script type="text/javascript">var submitted=false;</script>
