--- a/team.html
+++ b/team.html
@@ -52,6 +52,15 @@
         <h1 class="team-title">Our Team</h1>
         <div class="row justify-content-center">
           <div class='col-12'>
+            <h2 class="committee-title text-center">Our Executive Board</h2>
+          </div>
+          <div class="person-col">
+            <div class="person-container">
+              <img src="./dist/board.jpeg" class="person-pic board-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">The Executive Board</p></div>
+            </div>
+          </div>
+          <div class='col-12'>
             <h2 class="committee-title text-center">Operations & Logistics</h2>
           </div>
           <div class="person-col">
@@ -76,6 +85,12 @@
             <div class="person-container">
               <img src="./dist/michelle.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Michelle</p></div>
+            </div>
+          </div>
+          <div class="person-col">
+            <div class="person-container">
+              <img src="./dist/morgan.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Morgan</p></div>
             </div>
           </div>
 
