--- a/contact.html
+++ b/contact.html
@@ -57,10 +57,10 @@
           <a class="social-link" href="mailto:greenhacksJHU@gmail.com">
             <i class="far fa-envelope"></i>
           </a>
-          <a class="social-link" href="https://www.instagram.com/">
+          <a class="social-link" href="https://www.instagram.com/greenhacksjhu/">
             <i class="fab fa-instagram"></i>
           </a>
-          <a class="social-link" href="https://www.facebook.com/">
+          <a class="social-link" href="https://www.facebook.com/greenhacksjhu/?__tn__=%2Cd%2CP-R&eid=ARA-_d0xZZ3v8Aizll8_HneGe2EXwU1IwFLFRS37WDTSLoiuIePpiK5pC5d1FEoc4zbXqA_JrCXQEOsA">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
