sponsor updates and social links

--- a/sponsors.html
+++ b/sponsors.html
@@ -52,7 +52,7 @@
         <h1 class="sponsor-title">Thank you to our Sponsors</h1>
         <p class="sponsor-blurb">
           We are currently looking for sponsors for our next hackathon in April of 2020. If your organization is interested in sponsoring GreenHacks 2020, please <a href="mailto:greenhacks.outreach@gmail.com">email us</a>
-          or take a look at our <a href="#"> sponsorship package</a>
+          or take a look at our <a href="./dist/GreenHacksSponsorship.pdf"> sponsorship package</a>
         </p>
 
         <div class="col-md-3 col-sm-6 col-12">
