--- a/registration.html
+++ b/registration.html
@@ -81,6 +81,9 @@
       <div class="col-10 offset-1 col-md-6 offset-md-3">
         <h3 class="registration-title">Registration for GreenHacks 2020 is opening soon!</h3>
         <p>
+          The event will take place April 3-5 in Bloomberg on Johns Hopkins Homewood Campus.
+        </p>
+        <p>
         We are excited to announce that the theme for this year’s hackathon will be Sustainable Cities. We emphasize that participants can come from all backgrounds, majors, and areas of expertise, and we welcome students from across the Johns Hopkins network to register, including those from the Hopkins Homewood campus, Bloomberg School of Public Health, the Carey Business School, and MICA. You can register as a team or as an individual and find a team when you arrive. Registration is open from Feb 13 - March 20.
         </p>
 
