final updates, see doc

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               Who?
             </h3>
             <div class="answer">
-              Open to any university students.
+              Open to students of ALL backgrounds and skills from the Homewood campus, Bloomberg School of Public Health, Carey Business School, MICA, and other Hopkins-affiliated schools
               <a href="./registration.html" class="btn btn-dark btn-how-register d-block"> Register Now!</a>
             </div>
           </div>
