--- a/index.html
+++ b/index.html
@@ -47,8 +47,33 @@
     <div class="row">
         <div class="col-xs-12 section splash parallax parallax-splash">
           <img src="./dist/logo.png" class="gh-splash mx-auto" />
-          <a href="./registration.html" type="button" class="btn btn-dark splash-btn mx-auto">Register Now</a>
+          <a href="#covid-warning" type="button" class="btn btn-dark splash-btn mx-auto">Important Info About GreenHacks 2020</a>
         </div>
+    </div>
+  </div>
+  <div class="w-100"></div>
+  <div class="container overflow-x-hidden">
+    <div class="row overflow-x-hidden">
+      <div class="col-sm-8 offset-sm-2">
+        <div class="section theme" data-aos="fade-up">
+          <img src="./dist/leaves.svg" class="leaves-4"/>
+          <div class="d-flex">
+
+            <h2 id="covid-warning">Important News Concerning GreenHacks 2020</h2>
+          </div>
+          <p>
+            In light of the current COVID-19 situation, as well as the announcement that the Johns Hopkins Homewood Campus will be closed to students for the rest of this school year, we wanted to officially reach out with an update. We will be postponing our upcoming GreenHacks event until next school year. While this is certainly a disappointment, the health and safety of our Hopkins community, greater Baltimore community, and the wider global community beyond is deeply important to us.
+          </p>
+
+          <p>
+            We sincerely thank you all for registering for this event, engaging with us, and supporting us. We are actively working on our plans for next semester, and we will remain in contact with you as we know more.
+          </p>
+          <p>
+            In the meantime, we hope you are all staying healthy and safe, and our team looks forward to seeing you next school year.
+          </p>
+
+        </div>
+      </div>
     </div>
   </div>
   <div class="w-100"></div>
